--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="shortcut icon" href="img/favicon/bananas.png" type="image/x-icon" />
   <title>Quitanda Online :: Página Principal</title>
   <link href="css/styles.css" rel="stylesheet" />
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -23,26 +24,26 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav flex-grow-1">
             <li class="nav-item">
-              <a class="nav-link text-white" href="/index.html">Principal</a>
+              <a class="nav-link text-white" href="index.html">Principal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/contato.html">Contato</a>
+              <a class="nav-link text-white" href="contato.html">Contato</a>
             </li>
           </ul>
           <div class="align-self-end">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="/cadastro.html" class="nav-link text-white">
+                <a href="cadastro.html" class="nav-link text-white">
                   Quero Me Cadastrar
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/login.html" class="nav-link text-white"> Entrar </a>
+                <a href="login.html" class="nav-link text-white"> Entrar </a>
               </li>
               <li class="nav-item">
                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                   title="5 produto(s) no carrinho"><small>5</small></span>
-                <a href="/carrinho.html" class="nav-link text-white">
+                <a href="carrinho.html" class="nav-link text-white">
                   <i class="bi-cart" style="font-size: 24px; line-height: 24px"></i>
                 </a>
               </li>
@@ -62,16 +63,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-            <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+            <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+            <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-            <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+            <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+            <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="/img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
-            <img src="/img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
+            <img src="img/slides/slide01.jpg" class="d-none d-md-block w-100" alt="">
+            <img src="img/slides/slide01small.jpg" class="d-block d-md-none  w-100" alt="">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselMain" data-bs-slide="prev">
@@ -141,8 +142,8 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <a href="/produto.html">
-                <img src="/img/produtos/000001.jpg" class="card-img-top">
+              <a href="produto.html">
+                <img src="img/produtos/000001.jpg" class="card-img-top">
               </a>
               <div class="card-header">
                 R$ 4,50
@@ -166,7 +167,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000002.jpg" class="card-img-top">
+              <img src="img/produtos/000002.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -189,7 +190,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000003.jpg" class="card-img-top">
+              <img src="img/produtos/000003.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -214,7 +215,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000004.jpg" class="card-img-top">
+              <img src="img/produtos/000004.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -237,7 +238,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000005.jpg" class="card-img-top">
+              <img src="img/produtos/000005.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -260,7 +261,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000006.jpg" class="card-img-top">
+              <img src="img/produtos/000006.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -283,7 +284,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000007.jpg" class="card-img-top">
+              <img src="img/produtos/000007.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -306,7 +307,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000008.jpg" class="card-img-top">
+              <img src="img/produtos/000008.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -329,7 +330,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart-fill" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000009.jpg" class="card-img-top">
+              <img src="img/produtos/000009.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -352,7 +353,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000010.jpg" class="card-img-top">
+              <img src="img/produtos/000010.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -375,7 +376,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000011.jpg" class="card-img-top">
+              <img src="img/produtos/000011.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -398,7 +399,7 @@
               <a href="#" class="position-absolute end-0 p-2 text-danger">
                 <i class="bi-suit-heart" style="font-size: 24px; line-height: 24px;"></i>
               </a>
-              <img src="/img/produtos/000012.jpg" class="card-img-top">
+              <img src="img/produtos/000012.jpg" class="card-img-top">
               <div class="card-header">
                 R$ 4,50
               </div>
@@ -497,7 +498,9 @@
     </footer>
   </div>
 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
