--- a/index.html
+++ b/index.html
@@ -469,21 +469,21 @@
             CNPJ 99.999.999/0001-99
           </div>
           <div class="col-12 col-md-4 text-center">
-            <a href="/privacidade.html" class="text-decoration-none text-dark">
+            <a href="privacidade.html" class="text-decoration-none text-dark">
               Políticas de Privacidade
             </a><br>
-            <a href="/termos.html" class="text-decoration-none text-dark">
+            <a href="termos.html" class="text-decoration-none text-dark">
               Termos de Uso
             </a><br>
-            <a href="/quemsomos.html" class="text-decoration-none text-dark">
+            <a href="quemsomos.html" class="text-decoration-none text-dark">
               Quem Somos
             </a><br>
-            <a href="/trocas.html" class="text-decoration-none text-dark">
+            <a href="trocas.html" class="text-decoration-none text-dark">
               Trocas de Devoluções
             </a><br>
           </div>
           <div class="col-12 col-md-4 text-center">
-            <a href="/contato.html" class="text-decoration-none text-dark">
+            <a href="contato.html" class="text-decoration-none text-dark">
               Contato pelo Site
             </a><br>
             <a href="mailto:email@quitandaonline.com" class="text-decoration-none text-dark">
