--- a/cadastronovasenha.html
+++ b/cadastronovasenha.html
@@ -7,8 +7,9 @@
   <link rel="shortcut icon" href="img/favicon/bananas.png" type="image/x-icon" />
   <title>Quitanda Online :: Cadastrar Nova Senha</title>
   <link href="css/styles.css" rel="stylesheet" />
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -23,26 +24,26 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav flex-grow-1">
             <li class="nav-item">
-              <a class="nav-link text-white" href="/index.html">Principal</a>
+              <a class="nav-link text-white" href="index.html">Principal</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/contato.html">Contato</a>
+              <a class="nav-link text-white" href="contato.html">Contato</a>
             </li>
           </ul>
           <div class="align-self-end">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a href="/cadastro.html" class="nav-link text-white">
+                <a href="cadastro.html" class="nav-link text-white">
                   Quero Me Cadastrar
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/login.html" class="nav-link text-white"> Entrar </a>
+                <a href="login.html" class="nav-link text-white"> Entrar </a>
               </li>
               <li class="nav-item">
                 <span class="badge rounded-pill bg-light text-danger position-absolute ms-4 mt-0"
                   title="5 produto(s) no carrinho"><small>5</small></span>
-                <a href="/carrinho.html" class="nav-link text-white">
+                <a href="carrinho.html" class="nav-link text-white">
                   <i class="bi-cart" style="font-size: 24px; line-height: 24px"></i>
                 </a>
               </li>
@@ -86,21 +87,21 @@
             CNPJ 99.999.999/0001-99
           </div>
           <div class="col-12 col-md-4 text-center">
-            <a href="/privacidade.html" class="text-decoration-none text-dark">
+            <a href="privacidade.html" class="text-decoration-none text-dark">
               Políticas de Privacidade
             </a><br>
-            <a href="/termos.html" class="text-decoration-none text-dark">
+            <a href="termos.html" class="text-decoration-none text-dark">
               Termos de Uso
             </a><br>
-            <a href="/quemsomos.html" class="text-decoration-none text-dark">
+            <a href="quemsomos.html" class="text-decoration-none text-dark">
               Quem Somos
             </a><br>
-            <a href="/trocas.html" class="text-decoration-none text-dark">
+            <a href="trocas.html" class="text-decoration-none text-dark">
               Trocas de Devoluções
             </a><br>
           </div>
           <div class="col-12 col-md-4 text-center">
-            <a href="/contato.html" class="text-decoration-none text-dark">
+            <a href="contato.html" class="text-decoration-none text-dark">
               Contato pelo Site
             </a><br>
             <a href="mailto:email@quitandaonline.com" class="text-decoration-none text-dark">
@@ -115,7 +116,9 @@
     </footer>
   </div>
 
-  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
